--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="home.html" class="logo">Home</a>
+						<a href="index.html" class="logo">Home</a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -28,7 +28,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="home.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About Me</a></li>
 							<li><a href="multi/grad_pictures.html">Graduation Photoshoots</a></li>
 							<li><a href="multi/portraits.html">Portraits</a></li>
