--- a/edit.html
+++ b/edit.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="home.html" class="logo">Home</a>
+						<a href="index.html" class="logo">Home</a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -29,7 +29,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="home.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About Me</a></li>
 							<li><a href="multi/grad_pictures.html">Graduation Photoshoots</a></li>
 							<li><a href="multi/portraits.html">Portraits</a></li>
