--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="home.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About Me</a></li>
 							<li><a href="multi/grad_pictures.html">Graduation Photoshoots</a></li>
 							<li><a href="multi/portraits.html">Portraits</a></li>
