--- a/multi/grad_pictures.html
+++ b/multi/grad_pictures.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="../home.html"><strong>Home</strong></a></h1>
+						<h1><a href="../index.html"><strong>Home</strong></a></h1>
 						<nav>
 							<ul>
 								<li><a href="portraits.html">Portraits</a></li>
