--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 							<h1>Photos By Ashley</h1>
 						</header>
 						<div class="content">
-							<p>Lorem ipsum dolor sit amet nullam consequat<br />
-							sed veroeros. tempus adipiscing nulla.</p>
+							<p>Hello I am Ashley!</p>
 						</div>
 					</div>
 				</section>
