made style changes

--- a/packages.html
+++ b/packages.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="home.html" class="logo">Home</a>
+						<a href="index.html" class="logo">Home</a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -28,7 +28,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="home.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About Me</a></li>
 							<li><a href="multi/grad_pictures.html">Graduation Photoshoots</a></li>
 							<li><a href="multi/portraits.html">Portraits</a></li>
@@ -131,7 +131,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
+							<!--<ul class="icons">
 								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
@@ -140,7 +140,7 @@
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
+							</ul>-->
 						</div>
 					</footer>
 
