--- a/edit.html
+++ b/edit.html
@@ -72,9 +72,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
-									</a>
+									<img src="images/pic08.jpg" alt="" data-position="center center" />
 									<div class="content">
 										<div class="inner">
 											<header class="major">
@@ -88,9 +86,8 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
-									</a>
+									<img src="images/pic09.jpg" alt="" data-position="top center" />
+									
 									<div class="content">
 										<div class="inner">
 											<header class="major">
@@ -104,9 +101,8 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
-									</a>
+									<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+									
 									<div class="content">
 										<div class="inner">
 											<header class="major">
@@ -192,7 +188,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
+							<!--<ul class="icons">
 								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
@@ -201,7 +197,7 @@
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
+							</ul>-->
 						</div>
 					</footer>
 
