--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/stock_calendar.jpg" alt="images/stock_calendar.jpg" />
+										<img src="images/film-35.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="contact.html" class="link">Booking</a></h3>
-										<p>[DESCRIPTIVE TEXT]</p>
+										<h3><a href="contact.html" class="link">Book a Session</a></h3>
+										<p></p>
 									</header>
 								</article>
 								<article>
@@ -107,8 +107,8 @@
 										<img src="images/stock_calendar.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="packages.html" class="link">Packages Info</a></h3>
-										<p>[DESCRIPTIVE TEXT]</p>
+										<h3><a href="packages.html" class="link">Packages</a></h3>
+										<p></p>
 									</header>
 								</article>
 
