portraits and some home stuff

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Photos By Ashley</title>
+		<title>Ashley's Photography</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -44,7 +44,7 @@
 							<img src="images/banner_smog.jpg" alt="" />
 						</span>
 						<header class="major">
-							<h1>Photos By Ashley</h1>
+							<h1>Ashley's Photography</h1>
 						</header>
 						<div class="content">
 							<p>Hello I am Ashley!</p>
@@ -77,7 +77,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/me.jpg" alt="" />
+										<img src="images/heyy-36.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="about.html" class="link">About Me</a></h3>
