--- a/packages.html
+++ b/packages.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Photos By Ashley - Packages</title>
+		<title>Ashley's Photography - Packages</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -45,11 +45,11 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Elements</h1>
+										<h1>Packages</h1>
 									</header>
 
 									<!-- Content -->
-										<h2 id="content">Sample Content</h2>
+										<h2 id="content">Content and Pricing</h2>
 										<p>Praesent ac adipiscing ullamcorper semper ut amet ac risus. Lorem sapien ut odio odio nunc. Ac adipiscing nibh porttitor erat risus justo adipiscing adipiscing amet placerat accumsan. Vis. Faucibus odio magna tempus adipiscing a non. In mi primis arcu ut non accumsan vivamus ac blandit adipiscing adipiscing arcu metus praesent turpis eu ac lacinia nunc ac commodo gravida adipiscing eget accumsan ac nunc adipiscing adipiscing.</p>
 										<div class="row">
 											<div class="col-6 col-12-small">
@@ -58,6 +58,10 @@
 											</div>
 											<div class="col-6 col-12-small">
 												<h3>Magna odio tempus commodo</h3>
+												<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
+											</div>
+											<div class="col-6 col-12-small">
+												<h4>Magna odio tempus commodo</h4>
 												<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
 											</div>
 										</div>
@@ -78,22 +82,22 @@
 																<tr>
 																	<th>Name</th>
 																	<th>Description</th>
-																	<th>Price</th>
+																	<th>Base Price</th>
 																</tr>
 															</thead>
 															<tbody>
 																<tr>
-																	<td>Item1</td>
-																	<td>This is a test to see what this table actually does and what its function really is</td>
+																	<td>Individual</td>
+																	<td></td>
 																	<td>29.99</td>
 																</tr>
 																<tr>
-																	<td>Item2</td>
+																	<td>Group</td>
 																	<td>Vis ac commodo adipiscing arcu aliquet.</td>
 																	<td>19.99</td>
 																</tr>
 																<tr>
-																	<td>Item3</td>
+																	<td>Couples</td>
 																	<td> Morbi faucibus arcu accumsan lorem.</td>
 																	<td>29.99</td>
 																</tr>
