--- a/edit.html
+++ b/edit.html
@@ -76,9 +76,9 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Orci maecenas</h3>
+												<h3>Standard</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Natural hues and tones. Adjusted for blach blac..</p>
 											<ul class="actions">
 												<!--<li><a href="generic.html" class="button">Learn more</a></li>-->
 											</ul>
@@ -91,9 +91,9 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Rhoncus magna</h3>
+												<h3>Soft</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Low contrast softens features of the subject, creating anairy light aura. Cooler shadows with warm highlights to emphasize blah blah</p>
 											<ul class="actions">
 												<!--<li><a href="generic.html" class="button">Learn more</a></li>-->
 											</ul>
@@ -106,9 +106,9 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Sed nunc ligula</h3>
+												<h3>Dramatic</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>High contrast...</p>
 											<ul class="actions">
 												<!--<li><a href="generic.html" class="button">Learn more</a></li>-->
 											</ul>
