--- a/about.html
+++ b/about.html
@@ -45,23 +45,29 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Generic</h1>
+										<h1>Ashley Carpenter</h1>
 									</header>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
+									<h2>Meet your photographer!</h2>
 									</div>
 							</section>
 							<section id="two" class="spotlights-about">
 								<section>
-									<img src="images/pic08.jpg" alt="" data-position="center center" />
+									<img src="images/meian-15.jpg" alt="" data-position="center center" />
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3>Orci maecenas</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Photography has always been a passion of mine. In high school I discove I was able
+												experiment in pinhole photography with a shoebox camera I made in a physics class.
+												Since then I have improved my skills and equipment. For the last 4 years I've been
+												shooting primarily with a Canon Rebel T7i. 
+											</p>
+											<p>My aim is to capture the moment. The candid smiles and laughter show some of the 
+												happiest moments</p>
+											<p>If you tend to be camera shy do not worry! I always come prepared with a few guiding
+												poses. Hopefully by the end of it you'll sufugutrrjrfgjgjiocfj
+											</p>
 											<ul class="actions">
 												<!--<li><a href="generic.html" class="button">Learn more</a></li>-->
 											</ul>
