lots of the good changes

--- a/about.html
+++ b/about.html
@@ -33,8 +33,7 @@
 							<li><a href="multi/grad_pictures.html">Graduation Photoshoots</a></li>
 							<li><a href="multi/portraits.html">Portraits</a></li>
 							<li><a href="edit.html">Editing Styles</a></li>
-							<li><a href="packages.html">Packages</a></li>
-							<li><a href="contact.html">Contact Me</a></li>
+							<li><a href="contact.html">Book A Session</a></li>
 						</ul>
 					</nav>
 
@@ -43,20 +42,19 @@
 
 						<!-- One -->
 							<section id="one">
-								<div class="inner">
+								<div class="inner" style="padding-top: 2em; padding-bottom: 2em; height:fit-content">
 									<header class="major">
 										<h1>Ashley Carpenter</h1>
 									</header>
-									<h2>Meet your photographer!</h2>
 									</div>
 							</section>
 							<section id="two" class="spotlights-about">
 								<section>
-									<img src="images/meian-15.jpg" alt="" data-position="center center" />
+									<img src="images/heyy-36.jpg" alt="" data-position="center center" style="height: 30%; width: 30%"/>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Orci maecenas</h3>
+												<h3>Meet Your Photographer</h3>
 											</header>
 											<p>Photography has always been a passion of mine. In high school I discove I was able
 												experiment in pinhole photography with a shoebox camera I made in a physics class.
@@ -68,6 +66,9 @@
 											<p>If you tend to be camera shy do not worry! I always come prepared with a few guiding
 												poses. Hopefully by the end of it you'll sufugutrrjrfgjgjiocfj
 											</p>
+											I specialize in documenting candid moments that showcase YOU and your specific love/love 
+											language. Our number one priority together is to have a good time and create life long memories - 
+											leaving with an album full of unique images is just the cherry on top!
 											<ul class="actions">
 												<!--<li><a href="generic.html" class="button">Learn more</a></li>-->
 											</ul>
