--- a/edit.html
+++ b/edit.html
@@ -34,8 +34,7 @@
 							<li><a href="multi/grad_pictures.html">Graduation Photoshoots</a></li>
 							<li><a href="multi/portraits.html">Portraits</a></li>
 							<li><a href="edit.html">Editing Styles</a></li>
-							<li><a href="packages.html">Packages</a></li>
-							<li><a href="contact.html">Contact Me</a></li>
+							<li><a href="contact.html">Book A Session</a></li>
 						</ul>
 					</nav>
 
@@ -72,21 +71,22 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<img src="images/pic08.jpg" alt="" data-position="center center" />
+									<img src="images/roooooooose-1.jpg" alt="" data-position="center center" style="width:30%; height:30%"/>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3>Standard</h3>
 											</header>
-											<p>Natural hues and tones. Adjusted for blach blac..</p>
+											<p>Natural hues and tones. Adjusted for blach blac.. </p>
 											<ul class="actions">
 												<!--<li><a href="generic.html" class="button">Learn more</a></li>-->
 											</ul>
 										</div>
 									</div>
+									<img src="images/lynnnsea-1.jpg" alt="" data-position="center center" style="width:30%; height:30%"/>
 								</section>
 								<section>
-									<img src="images/pic09.jpg" alt="" data-position="top center" />
+									<img src="images/roooooooose-2.jpg" alt="" data-position="top center" style="width:30%; height:30%"/>
 									
 									<div class="content">
 										<div class="inner">
@@ -99,9 +99,10 @@
 											</ul>
 										</div>
 									</div>
+									<img src="images/lynnnsea-2.jpg" alt="" data-position="top center" style="width:30%; height:30%"/>
 								</section>
 								<section>
-									<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+									<img src="images/roooooooose-3.jpg" alt="" data-position="25% 25%" style="width:30%; height:30%"/>
 									
 									<div class="content">
 										<div class="inner">
@@ -114,6 +115,7 @@
 											</ul>
 										</div>
 									</div>
+									<img src="images/lynnnsea-3.jpg" alt="" data-position="25% 25%" style="width:30%; height:30%"/>
 								</section>
 							</section>
 
