--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 							<li><a href="multi/grad_pictures.html">Graduation Photoshoots</a></li>
 							<li><a href="multi/portraits.html">Portraits</a></li>
 							<li><a href="edit.html">Editing Styles</a></li>
-							<li><a href="packages.html">Packages</a></li>
-							<li><a href="contact.html">Contact Me</a></li>
+							<li><a href="contact.html">Book A Session</a></li>
 						</ul>
 					</nav>
 
@@ -47,7 +46,7 @@
 							<h1>Ashley's Photography</h1>
 						</header>
 						<div class="content">
-							<p>Hello I am Ashley!</p>
+							<p>Feel free to check out my galleries and learn more about me and my experience and style in photography!</p>
 						</div>
 					</div>
 				</section>
@@ -62,8 +61,8 @@
 										<img src="images/Jendalyn-Cropped.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="multi/grad_pictures.html" class="link">Graduation Photos</a></h3>
-										<p>[DESCRIPTIVE TEXT]</p>
+										<h3><a href="multi/grad_pictures.html" class="link">Graduation</a></h3>
+										<p></p>
 									</header>
 								</article>
 								<article>
@@ -72,7 +71,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="multi/portraits.html" class="link">Portraits</a></h3>
-										<p>[DESCRIPTIVE TEXT]</p>
+										<p></p>
 									</header>
 								</article>
 								<article>
@@ -81,16 +80,16 @@
 									</span>
 									<header class="major">
 										<h3><a href="about.html" class="link">About Me</a></h3>
-										<p>[DESCRIPTIVETEXT]</p>
+										<p></p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/rosie.JPG" alt="" />
+										<img src="images/rosssie-1.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="edit.html" class="link">Editing Styles</a></h3>
-										<p>[DESCRIPTIVE TEXT]</p>
+										<p></p>
 									</header>
 								</article>
 								<article>
@@ -102,7 +101,7 @@
 										<p></p>
 									</header>
 								</article>
-								<article>
+								<!--<article>
 									<span class="image">
 										<img src="images/stock_calendar.jpg" alt="" />
 									</span>
@@ -110,7 +109,7 @@
 										<h3><a href="packages.html" class="link">Packages</a></h3>
 										<p></p>
 									</header>
-								</article>
+								</article>-->
 
 						<!-- Two -->
 							<!--<section id="two">
