--- a/multi/portraits.html
+++ b/multi/portraits.html
@@ -16,10 +16,11 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
+				<h3 style="text-align: center; background-color: #5b4635; padding: .5em 0 .5em 0;"> Click on an image to see full-size.</h3>
+						
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="../index.html"><strong>Home</strong></a></h1>
+						<h1><a href="../index.html"><strong>HOME</strong></a></h1>
 						<nav>
 							<ul>
 								<li><a href="grad_pictures.html">Graduation Pictures</a></li>
