--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 				<section id="banner" class="stylemain">
 					<div class="inner">
 						<span class="image">
-							<img src="images/banner_smog.jpg" alt="" />
+							<img src="images/traffic.jpg" alt="" />
 						</span>
 						<header class="major">
 							<h1>Ashley's Photography</h1>
 						</header>
 						<div class="content">
-							<p>Feel free to check out my galleries and learn more about me and my experience and style in photography!</p>
+							<p>Check out my galleries and book your session today!</p>
 						</div>
 					</div>
 				</section>
@@ -94,7 +94,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/film-35.jpg" alt="" />
+										<img src="images/cam-12.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="contact.html" class="link">Book a Session</a></h3>
