--- a/about.html
+++ b/about.html
@@ -56,19 +56,20 @@
 											<header class="major">
 												<h3>Meet Your Photographer</h3>
 											</header>
-											<p>Photography has always been a passion of mine. In high school I discove I was able
-												experiment in pinhole photography with a shoebox camera I made in a physics class.
-												Since then I have improved my skills and equipment. For the last 4 years I've been
-												shooting primarily with a Canon Rebel T7i. 
+											<p>Photography has always been a passion of mine. I was always the person snapping away, taking
+												candid photos of my friends with a phone camera. In high school, I discovered my love for
+												the physics of taking photos. I was able to experiment in pinhole photography with a 
+												shoebox camera I made in my physics class. Since then I have improved my skills 
+												and equipment. For the last 4 years I've been shooting primarily with a Canon Rebel T7i. 
+												Aside from taking photos, I'm also an Astrophysics student in my 4th year at UCLA. 
 											</p>
-											<p>My aim is to capture the moment. The candid smiles and laughter show some of the 
-												happiest moments</p>
-											<p>If you tend to be camera shy do not worry! I always come prepared with a few guiding
-												poses. Hopefully by the end of it you'll sufugutrrjrfgjgjiocfj
+											<p>My specialty is my ability to capture the moment. The candid smiles and laughter show some of the 
+												happiest moments. If you tend to be camera shy do not worry! I always come prepared with some guidance. 
+												Our main priority during the photoshoot is to have a fun time. By the end you'll
+											have a wonderful selection of unique images. </p>
 											</p>
-											I specialize in documenting candid moments that showcase YOU and your specific love/love 
-											language. Our number one priority together is to have a good time and create life long memories - 
-											leaving with an album full of unique images is just the cherry on top!
+											
+
 											<ul class="actions">
 												<!--<li><a href="generic.html" class="button">Learn more</a></li>-->
 											</ul>
