--- a/edit.html
+++ b/edit.html
@@ -49,8 +49,7 @@
 								<h1>Editing Styles</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p></p>
 							</div>
 						</div>
 					</section>
@@ -62,9 +61,14 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Sed amet aliquam</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+									<p>Below are some of my personal editing styles. Over the last 3 and half years
+										I have curated a variety of Lightroom presets and techniques to enhance the 
+										overall mood of a photo.
+										"Standard" tends to be the default editing style for most photoshoots,
+										but if you're looking for something a little less conventional, I am more
+										more than happy to be flexible!
+									</p>
 								</div>
 							</section>
 
@@ -77,7 +81,9 @@
 											<header class="major">
 												<h3>Standard</h3>
 											</header>
-											<p>Natural hues and tones. Adjusted for blach blac.. </p>
+											<p>Natural hues and tones. Captures a more realistic interpretation
+												of what it was like to be there "in the moment."
+											</p>
 											<ul class="actions">
 												<!--<li><a href="generic.html" class="button">Learn more</a></li>-->
 											</ul>
@@ -93,7 +99,8 @@
 											<header class="major">
 												<h3>Soft</h3>
 											</header>
-											<p>Low contrast softens features of the subject, creating anairy light aura. Cooler shadows with warm highlights to emphasize blah blah</p>
+											<p>Low contrast softens features of the subject, creating an light and airy aura. 
+												Cooler shadows with warm highlights to create a dreamy snapshot of time.</p>
 											<ul class="actions">
 												<!--<li><a href="generic.html" class="button">Learn more</a></li>-->
 											</ul>
@@ -109,7 +116,10 @@
 											<header class="major">
 												<h3>Dramatic</h3>
 											</header>
-											<p>High contrast...</p>
+											<p>High contrast with deep shadows creates a more mysterious mood,
+												demanding attention towards the subject. 
+		
+											</p>
 											<ul class="actions">
 												<!--<li><a href="generic.html" class="button">Learn more</a></li>-->
 											</ul>
