--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<section id="banner" class="stylemain">
 					<div class="inner">
 						<span class="image">
-							<img src="images/traffic.jpg" alt="" />
+							<img src="images/uhhh.jpg" alt="" />
 						</span>
 						<header class="major">
 							<h1>Ashley's Photography</h1>
