--- a/contact.html
+++ b/contact.html
@@ -64,21 +64,29 @@
 										people we can schedule an early morning sunrise golden hour photoshoot 
 										for an additional cost (+$100)<p>
 
+									<p><strong>Sessions are booked through a google form linked <a href="https://docs.google.com/forms/d/e/1FAIpQLSf5DPmpXCoUDa-xeQr9zk_I5leJ7FOXV9bWmUcJnsm27yDCLw/viewform" 
+										target = "_blank">here</a> (and the bottom of this page)! But feel free to contact me with any questions or booking information at: <u>ashleycarpenter@ucla.edu</u></strong><p>
+
+
 									<!-- Content -->
 									<div style="text-align: center;">
 									<h5><u>Individual</u></h5>
 										<h6>1 hour: <strong>$150</strong> <letter>&#8212&#8212</letter> 90 minutes: <strong>$215</strong> </h6>
-										<p>Standard individual photoshoot with dvdsvfvfs.*<p>
-									<h5><u>Group</u> (<u>2-5</u>)</h5>
-										<h6>1 hour: <strong>$200</strong> <letter>&#8212&#8212</letter> 90 minutes: <strong>$280</strong></h6>
-									<h5><u>Group</u> (<u>6+</u>) </h5>
-										<h6>1 hour: <strong>$250</strong> <letter>&#8212&#8212</letter> 90 minutes: <strong>$375</strong></h6>
+										<p>Standard individual photoshoot, you're in the spotlight.<p>
+									<h5><u>Group</u> (<u>2-4</u>)</h5>
+										<h6>1 hour: <strong>$225</strong> <letter>&#8212&#8212</letter> 90 minutes: <strong>$315</strong></h6>
+										<p>Bring your friends and family along.<p>
+									<h5><u>Group</u> (<u>5+</u>) </h5>
+										<h6>1 hour: <strong>$325</strong> <letter>&#8212&#8212</letter> 90 minutes: <strong>$450</strong></h6>
+										<p>The more the merrier!<p>
 									<h5><u>Professional Headshot Mini Session</u></h5>
 										<h6>15-20 minutes: <strong>$50</strong></h6>
 										<p>Need to update your LinkedIn? Book a short mini session to get classic
 											professional portraits!<p>
 									</div>
-									<div style="text-align: center;"><a href="#" class="button large">Book a Session</a></div>
+									<div style="text-align: center;">
+										<a href="https://docs.google.com/forms/d/e/1FAIpQLSf5DPmpXCoUDa-xeQr9zk_I5leJ7FOXV9bWmUcJnsm27yDCLw/viewform" 
+										target = "_blank" class="button large">Book a Session</a></div>
 
 										
 										
