--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 							</section>
 							<section id="two" class="spotlights-about">
 								<section>
-									<img src="images/heyy-36.jpg" alt="" data-position="center center" style="height: 30%; width: 30%"/>
+									<img src="images/hessopretty-46.jpg" alt="" data-position="center center" style="height: 30%; width: 30%"/>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
@@ -60,7 +60,8 @@
 												candid photos of my friends with a phone camera. In high school, I discovered my love for
 												the physics of taking photos. I was able to experiment in pinhole photography with a 
 												shoebox camera I made in my physics class. Since then I have improved my skills 
-												and equipment. For the last 4 years I've been shooting primarily with a Canon Rebel T7i. 
+												and equipment. For the last 4 years I've been shooting primarily with a Canon Rebel T7i, photographing friends
+												and even doing self portraits! 
 												Aside from taking photos, I'm also an Astrophysics student in my 4th year at UCLA. 
 											</p>
 											<p>My specialty is my ability to capture the moment. The candid smiles and laughter show some of the 
