--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/heyy-36.jpg" alt="" />
+										<img src="images/hessopretty-44.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="about.html" class="link">About Me</a></h3>
