--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<h1>Ashley's Photography</h1>
 						</header>
 						<div class="content">
-							<p>Check out my galleries and book your session today!</p>
+							<p>Check out my galleries and book your session today! For the best experience use a laptop.  </p>
 						</div>
 					</div>
 				</section>
