--- a/contact.html
+++ b/contact.html
@@ -49,11 +49,11 @@
 										<h2 id="content">Content and Pricing</h2>
 									<p>Photoshoots for any occassion! Graduation, portraits, special events, 
 										and creative shoots. Any location of your choosing within 10 miles
-										of Los Angeles. Two to three weeks 
+										of Los Angeles. Two to four weeks 
 										following the session, you will be emailed a google drive 
 										folder with all of the edited photos from your shoot. 
-										Typical hour long photo sessions produce between 30 and 
-										70 images, but if we happen to take more, you'll recieve 
+										Typical hour long photo sessions produce between 25 and 
+										40 images, but if we happen to take more, you'll recieve 
 										them all.</p>
 									<p>Most photoshoots are scheduled during the day and early 
 										evening to take advantage of the sunset golden hour. In the spring
