--- a/contact.html
+++ b/contact.html
@@ -73,12 +73,16 @@
 									<h5><u>Individual</u></h5>
 										<h6>1 hour: <strong>$150</strong> <letter>&#8212&#8212</letter> 90 minutes: <strong>$215</strong> </h6>
 										<p>Standard individual photoshoot, you're in the spotlight.<p>
-									<h5><u>Group</u> (<u>2-4</u>)</h5>
-										<h6>1 hour: <strong>$225</strong> <letter>&#8212&#8212</letter> 90 minutes: <strong>$315</strong></h6>
+									<h5><u>Duo</u></h5>
+										<h6>1 hour: <strong>$250</strong> <letter>&#8212&#8212</letter> 90 minutes: <strong>$325</strong></h6>
+										<p>Significant other or your best friend.<p>
+									<h5><u>Group</u> (<u>3-4</u>)</h5>
+										<h6>1 hour: <strong>$350</strong> <letter>&#8212&#8212</letter> 90 minutes: <strong>$475</strong></h6>
 										<p>Bring your friends and family along.<p>
 									<h5><u>Group</u> (<u>5+</u>) </h5>
-										<h6>1 hour: <strong>$325</strong> <letter>&#8212&#8212</letter> 90 minutes: <strong>$450</strong></h6>
-										<p>The more the merrier!<p>
+										<h6>1 hour: <strong>$500*</strong> <letter>&#8212&#8212</letter> 90 minutes: <strong>$700*</strong></h6>
+										<p>The more the merrier!<br>
+										*+$25 per additional person in groups larger than 5</p>
 									<h5><u>Professional Headshot Mini Session</u></h5>
 										<h6>15-20 minutes: <strong>$50</strong></h6>
 										<p>Need to update your LinkedIn? Book a short mini session to get classic
